# MesAbos

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d6ec5ec833d8_subscription.py
backend/: __init__.py  __version__.py  commands.py  config.py  database.py  dependencies.py  main.py
backend/crud/: subscription.py
backend/database/: models.py
backend/db/: crud.py  database.py  models.py  schemas.py
backend/dependencies/: core.py
backend/extensions/: doppler.py
backend/models/: __init__.py  subscription.py
backend/routers/: main.py  subscription.py
backend/schemas/: subscription.py
backend/settings/: __init__.py  doppler.py
