[tool.poetry]
name = "mesabos"
version = "0.1.0"
description = "Small subscriptions tracker, a pythonic way"
authors = ["Pierre-Yves Gillier <github@pygillier.me>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pygillier/MesAbos"


[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
